Rough stretched navigation bar and chose some dab pictures which I might replace with cats. Still don't fully know what website will be about.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- ----------------------------------------------------------------- -->
-<!-- ----------------------------------------------------------------- -->
-<!-- ----------------------------------------------------------------- -->
-<head> <!-- header begins here -->
+<!-- -------------------------START HEADER---------------------------- -->
+
+<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="James Covington">
 
   <link href="./css/style.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <script type="text/javascript" src="./js/header-functions.js"></script>
 
-</head> <!-- header ends here -->
-<!-- ----------------------------------------------------------------- -->
-<!-- ----------------------------------------------------------------- -->
-<!-- ----------------------------------------------------------------- -->
+</head>
+<!-- ----------------------END HEADER -------------------------------- -->
 
 
 
@@ -29,29 +30,45 @@
 
 
 
-<!-- ---------------------------------------------------------------------------------- -->
-<!-- ---------------------------------------------------------------------------------- -->
-<!-- ---------------------------------------------------------------------------------- -->
-<body> <!-- body begins here -->
+<!-- ----------------------------------START BODY------------------------------ -->
 
+<body>
+  <!-- body begins here -->
 
-  The quickest of brown foxes.
+  <!-- START NAVIGATION -->
+  <!-- |LOGO|NAME|HOME|ABOUT|CONTACT -->
+  <div id="top-navigation-container" class="d-flex flex-row">
+    <div class="row">
+      <div id="logo" style="background-color: aqua;"></div>
+      <div id="name-of-company" style="background-color: purple;">NAME OF COMPANY</div>
+      <div id="home">HOME</div>
+      <div id="about">ABOUT</div>
+      <div id="contact">CONTACT</div>
+    </div>
+  </div>
+  <!-- END NAVIGATION -->
 
+  <!-- START CENTER CONTENT -->
+  <div id="center-container" class="container-fluid">
+    <div class="row">
+      <img src="https://images.unsplash.com/photo-1519070994522-88c6b756330e" alt="Could not find image" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+      <img src="https://images.unsplash.com/photo-1523253112282-26697ead8398" alt="Could not find image" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+      <img src="https://images.unsplash.com/photo-1564956029070-8707bcb48f93" alt="Could not find image" class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+      <img src="https://images.unsplash.com/photo-1528292536883-0916382e7ab5" alt="Could not find image" class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+      <img src="https://images.unsplash.com/photo-1579762040557-a69faf70a2e3" alt="Could not find image" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+      <img src="https://images.unsplash.com/photo-1521738177080-fdfcc37d6d82" alt="Could not find image" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+      <img src="https://images.unsplash.com/photo-1489641223343-c6b77f6b0bf6" alt="Could not find image" class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+    </div>
+  </div>
+  <!-- END CENTER CONTENT -->
 
-
-
-  <!-- ====================================================== -->
-  <!-- ====================================================== -->
+  <!-- =================END FOOTER--========================= -->
   <footer>
-    <!-- footer of page begins here -->
     <script type="text/javascript" src="./js/footer-functions.js"></script>
-  </footer> <!-- footer of page ends here -->
-  <!-- ====================================================== -->
-  <!-- ====================================================== -->
+  </footer>
+  <!-- ==================START FOOTER ======================= -->
 
 </body>
-<!-- ---------------------------------------------------------------------------------- -->
-<!-- ---------------------------------------------------------------------------------- -->
-<!-- ---------------------------------------------------------------------------------- -->
+<!-- ------------------------END BODY ------------------------------------------------- -->
 
 </html>
