Finished animation of home page. Added drop down to contacts.

--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
       </div>
 
     </div>
-    <div id="center-top">
-        HELLO WORLD;
+    <!-- Id will be changed to center-top -->
+    <div name="center-top" id="">
+        
     </div>
 
 
