--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 
     <!-- START CENTER CONTENT -->
     <!-- Major help came from https://mdbootstrap.com/docs/jquery/forms/contact/ -->
-    <div class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-5">
+    <div class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-3">
         <div class="row"></div>
         <h2 class="h1 text-center">Enter in your message here.</h2>
 
@@ -86,10 +86,12 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <div class="form">
-                                <input type="text" id="subject" name="subject" class="form-control"
-                                    placeholder="SUBJECT">
-                                <br></div>
+                            <select id="subject" class="form-control">
+                                <option selected>QUESTION</option>
+                                <option>COMPLAINT</option>
+                                <option>DAB</option>
+                            </select>
+                            <br>
                         </div>
                     </div>
                     <div class="row">
