--- a/about.html
+++ b/about.html
@@ -63,10 +63,24 @@
     <!-- END NAVIGATION -->
 
     <!-- START CENTER CONTENT -->
-    <div id="center-container" class="d-flex justify-content-center">
-
+    <div id="center-holder" class="container-fluid" style="background: red;">
+        <div id="center-container" class="container-fluid col-xs-12 col-sm-12 col-md-8 col-lg-8"
+            style="height: 500px;background: blue;">
+            <div class="row height-full">
+                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                    HELLO
+                </div>
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                    WORLD
+                </div>
+                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                    WORLD
+                </div>
+            </div>
+        </div>
     </div>
     <!-- END CENTER CONTENT -->
+    <!-- https://images.pexels.com/photos/4701633/pexels-photo-4701633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260 -->
 
     <!-- =================END FOOTER--========================= -->
     <footer>
