Updated contact form to be more center

--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <script type="text/javascript" src="./js/header-functions.js"></script>
 
+  <style>
+    div>img {
+      max-width: 100%;
+      height: auto;
+      pointer-events: none;
+      opacity: .2;
+    }
+  </style>
+
 </head>
 <!-- ----------------------END HEADER -------------------------------- -->
 
@@ -132,7 +141,7 @@
     </div>
     <!-- Id will be changed to center-top -->
     <div name="center-top" id="">
-        
+
     </div>
 
 
