--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <meta name="author" content="James Covington">
 
     <link href="./css/style.css" rel="stylesheet">
-    <link href="./css/contact.css" rel="stylesheet">
+    <link href="./css/about.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -63,24 +63,43 @@
     <!-- END NAVIGATION -->
 
     <!-- START CENTER CONTENT -->
-    <div id="center-holder" class="container-fluid" style="background: red;">
-        <div id="center-container" class="container-fluid col-xs-12 col-sm-12 col-md-8 col-lg-8"
-            style="height: 500px;background: blue;">
+    <div id="center-holder" class="container-fluid">
+        <div id="center-container" class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">
             <div class="row height-full">
-                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                    HELLO
+                <div class="container-fluid col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                    <img src="https://images.pexels.com/photos/4701633/pexels-photo-4701633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                        alt="Could not find image" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ml-0 p-1">
                 </div>
-                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                    WORLD
-                </div>
-                <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-                    WORLD
+                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
+                <div id="paragraphs" class="col-xs-5 col-sm-5 col-md-5 col-lg-5" style="color:white;background: rgba(7, 47, 94, 0.6);">
+                    <p>
+                        <strong>Started</strong> earnest brother believe an exposed so. Me he believing daughters if forfeited at
+                        furniture. Age again and stuff downs spoke. Late hour new nay able fat each sell. Nor themselves
+                        age introduced frequently use <i>unsatiable</i> devonshire get. They why quit gay cold rose deal park.
+                        One same they four did ask busy. Reserved opinions fat him nay position. Breakfast as zealously
+                        incommode do agreeable furniture. One too nay led fanny allow plate. </p><p>
+
+                        Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met
+                        its things. Narrow enough sex moment <u>desire</u> are. Hold who what come that seen read age its.
+                        Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted
+                        promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an.
+                        Design on longer thrown oppose am.</p><p>
+
+                        Death there mirth way the noisy merit. Piqued shy spring nor six though mutual living ask
+                        extent. Replying of dashwood advanced ladyship smallest disposal or. Attempt offices own improve
+                        now see. Called person are around county talked her esteem. Those fully these way nay thing
+                        seems.
+                    </p><p>
+                        Gay one the what walk then she. Demesne mention promise you justice arrived way. Or increasing
+                        to in especially inquietude companions acceptance admiration. Outweigh it families distance
+                        wandered ye an. Mr unsatiable at literature connection favourable. We neglected mr perfectly
+                        continual dependent.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
     <!-- END CENTER CONTENT -->
-    <!-- https://images.pexels.com/photos/4701633/pexels-photo-4701633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260 -->
 
     <!-- =================END FOOTER--========================= -->
     <footer>
