Added video to contact form

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
   <!-- START CENTER CONTENT -->
   <div class="center-holder">
-    <div id="center-container" class="container-fluid">
-      <div id="image-container" class="row">
+    <div id="center-container" tabindex="-1" class="container-fluid">
+      <div id="image-container" tabindex="-1" class="row">
         <img
           src="https://images.pexels.com/photos/414171/pexels-photo-414171.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
           alt="Could not find image" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 ml-0 p-1" name="Greenland">
