--- a/about.html
+++ b/about.html
@@ -63,38 +63,53 @@
     <!-- END NAVIGATION -->
 
     <!-- START CENTER CONTENT -->
+    <br><br>
     <div id="center-holder" class="container-fluid">
         <div id="center-container" class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">
             <div class="row height-full">
-                <div class="container-fluid col-xs-5 col-sm-5 col-md-5 col-lg-5">
+                <div class="container-fluid col-xs-5 col-sm-5 col-md-5 col-lg-5" style="color:white;background: rgba(7, 47, 94, 0.1);">
                     <img src="https://images.pexels.com/photos/4701633/pexels-photo-4701633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-                        alt="Could not find image" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ml-0 p-1">
-                </div>
-                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
-                <div id="paragraphs" class="col-xs-5 col-sm-5 col-md-5 col-lg-5" style="color:white;background: rgba(7, 47, 94, 0.6);">
-                    <p>
-                        <strong>Started</strong> earnest brother believe an exposed so. Me he believing daughters if forfeited at
-                        furniture. Age again and stuff downs spoke. Late hour new nay able fat each sell. Nor themselves
-                        age introduced frequently use <i>unsatiable</i> devonshire get. They why quit gay cold rose deal park.
-                        One same they four did ask busy. Reserved opinions fat him nay position. Breakfast as zealously
-                        incommode do agreeable furniture. One too nay led fanny allow plate. </p><p>
-
-                        Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met
-                        its things. Narrow enough sex moment <u>desire</u> are. Hold who what come that seen read age its.
-                        Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted
-                        promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an.
-                        Design on longer thrown oppose am.</p><p>
-
-                        Death there mirth way the noisy merit. Piqued shy spring nor six though mutual living ask
-                        extent. Replying of dashwood advanced ladyship smallest disposal or. Attempt offices own improve
-                        now see. Called person are around county talked her esteem. Those fully these way nay thing
-                        seems.
-                    </p><p>
-                        Gay one the what walk then she. Demesne mention promise you justice arrived way. Or increasing
+                        alt="Could not find image" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ml-0 p-1"
+                        style="opacity: .3;">
+                    <p>Day one the what walk then she. Demesne mention promise you justice arrived way. Or increasing
                         to in especially inquietude companions acceptance admiration. Outweigh it families distance
                         wandered ye an. Mr unsatiable at literature connection favourable. We neglected mr perfectly
-                        continual dependent.
-                    </p>
+                        continual dependent.</p>
+                </div>
+                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
+                <div id="paragraphs" class="col-xs-5 col-sm-5 col-md-5 col-lg-5"
+                    style="color:white;background: rgba(7, 47, 94, 0.1);">
+                    <br>
+                    <h1>About Vacation Picker</h1>
+                    <p><strong>Started</strong> is simply dummy text of the printing and typesetting industry. Lorem
+                        Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                        took a galley of type and scrambled it to make a type specimen book. It has survived not only
+                        five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
+                        passages, and more recently with desktop publishing software like Aldus PageMaker including
+                        versions of Lorem Ipsum. </p>
+                    <p> Now eldest new tastes plenty mother called misery get. Longer excuse for county nor except met
+                        its things. Narrow enough sex moment <u>desire</u> are. Hold who what come that seen read age
+                        its.
+                        Contained or estimable earnestly so perceived. Imprudence he in sufficient cultivated. Delighted
+                        promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an.
+                        Design on longer thrown oppose am.</p>
+
+                    <h3>What is Lorem Ipsum?</h3>
+
+                    <p> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                        classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a
+                        Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin
+                        words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in
+                        classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32
+                        and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
+                        written in 45 BC. This book is a treatise on the theory of ethics, very popular during the
+                        Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
+                        section 1.10.32.</p>
+                    <p>Day one the what walk then she. Demesne mention promise you justice arrived way. Or increasing
+                        to in especially inquietude companions acceptance admiration. Outweigh it families distance
+                        wandered ye an. Mr unsatiable at literature connection favourable. We neglected mr perfectly
+                        continual dependent.</p>
                 </div>
             </div>
         </div>
