--- a/about.html
+++ b/about.html
@@ -46,16 +46,16 @@
                 style=" width:65px;height:65px" style="background: transparent;">
         </a>
 
-        <div class="collapse navbar-collapse">
+        <div class="navbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">VACATION PICKER</a>
+                    <a class="nav-link " href="index.html">VACATION PICKER</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">CONTACT</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="about.html">ABOUT</a>
+                <li class="nav-item">
+                    <a class="nav-link active" href="about.html">ABOUT</a>
                 </li>
             </ul>
         </div>
@@ -67,7 +67,8 @@
     <div id="center-holder" class="container-fluid">
         <div id="center-container" class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">
             <div class="row height-full">
-                <div class="container-fluid col-xs-5 col-sm-5 col-md-5 col-lg-5" style="color:white;background: rgba(7, 47, 94, 0.1);">
+                <div class="container-fluid col-xs-5 col-sm-5 col-md-5 col-lg-5"
+                    style="color:white;background: rgba(7, 47, 94, 0.1);">
                     <img src="https://images.pexels.com/photos/4701633/pexels-photo-4701633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                         alt="Could not find image" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ml-0 p-1"
                         style="opacity: .3;">
