--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         <div class="navbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">VACATION PICKER</a>
+                    <a class="nav-link" href="index.html">VACATION PICKER</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="contact.html">CONTACT</a>
