--- a/about.html
+++ b/about.html
@@ -63,11 +63,10 @@
     <!-- END NAVIGATION -->
 
     <!-- START CENTER CONTENT -->
-    <br><br>
     <div id="center-holder" class="container-fluid">
-        <div id="center-container" class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">
+        <div id="center-container" class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
             <div class="row height-full">
-                <div class="container-fluid col-xs-5 col-sm-5 col-md-5 col-lg-5"
+                <div class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-3"
                     style="color:white;background: rgba(7, 47, 94, 0.1);">
                     <img src="https://images.pexels.com/photos/4701633/pexels-photo-4701633.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
                         alt="Could not find image" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ml-0 p-1"
@@ -77,11 +76,10 @@
                         wandered ye an. Mr unsatiable at literature connection favourable. We neglected mr perfectly
                         continual dependent.</p>
                 </div>
-                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
-                <div id="paragraphs" class="col-xs-5 col-sm-5 col-md-5 col-lg-5"
+                <div id="paragraphs" class="col-xs-12 col-sm-12 col-md-12 col-lg-3"
                     style="color:white;background: rgba(7, 47, 94, 0.1);">
                     <br>
-                    <h1>About Vacation Picker</h1>
+                    <h1 style="text-align: center;">About Vacation Picker</h1>
                     <p><strong>Started</strong> is simply dummy text of the printing and typesetting industry. Lorem
                         Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
                         took a galley of type and scrambled it to make a type specimen book. It has survived not only
@@ -96,7 +94,7 @@
                         promotion improving acuteness an newspaper offending he. Misery in am secure theirs giving an.
                         Design on longer thrown oppose am.</p>
 
-                    <h3>What is Lorem Ipsum?</h3>
+                    <h3 style="text-align: center;">What is Lorem Ipsum?</h3>
 
                     <p> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                         classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a
@@ -107,6 +105,16 @@
                         written in 45 BC. This book is a treatise on the theory of ethics, very popular during the
                         Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
                         section 1.10.32.</p>
+                    <p>Day one the what walk then she. Demesne mention promise you justice arrived way. Or increasing
+                        to in especially inquietude companions acceptance admiration. Outweigh it families distance
+                        wandered ye an. Mr unsatiable at literature connection favourable. We neglected mr perfectly
+                        continual dependent.</p>
+                </div>
+                <div class="container-fluid col-xs-12 col-sm-12 col-md-12 col-lg-3"
+                    style="color:white;background: rgba(7, 47, 94, 0.1);">
+                    <img src="https://images.pexels.com/photos/2873541/pexels-photo-2873541.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
+                        alt="Could not find image" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ml-0 p-1"
+                        style="opacity: .3;">
                     <p>Day one the what walk then she. Demesne mention promise you justice arrived way. Or increasing
                         to in especially inquietude companions acceptance admiration. Outweigh it families distance
                         wandered ye an. Mr unsatiable at literature connection favourable. We neglected mr perfectly
