reverted back the nav collapse

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 style=" width:65px;height:65px" style="background: transparent;">
         </a>
 
-        <div class="navbar">
+        <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link " href="index.html">VACATION PICKER</a>
@@ -76,7 +76,7 @@
                         wandered ye an. Mr unsatiable at literature connection favourable. We neglected mr perfectly
                         continual dependent.</p>
                 </div>
-                <div id="paragraphs" class="col-xs-12 col-sm-12 col-md-12 col-lg-3"
+                <div id="paragraphs" class="col-xs-12 col-sm-12 col-md-12 col-lg-6"
                     style="color:white;background: rgba(7, 47, 94, 0.1);">
                     <br>
                     <h1 style="text-align: center;">About Vacation Picker</h1>
