--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                 style=" width:65px;height:65px" style="background: transparent;">
         </a>
 
-        <div class="navbar">
+        <div class="collapse navbar-collapse">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">VACATION PICKER</a>
