--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         style="background: transparent;">
     </a>
 
-    <div class="navbar">
+    <div class="collapse navbar-collapse">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link active" href="index.html">VACATION PICKER</a>
