--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
         <a class="navbar-brand" href="/">
             <img id="logo"
                 src="https://purepng.com/public/uploads/large/purepng.com-earthearthplanetglobethird-planet-from-the-sun-1411526987450icb4m.png"
-                style=" width:65px;height:65px" style="background: transparent;">
+                style="background: transparent;">
         </a>
 
         <div class="collapse navbar-collapse">
