Completed adding regex validation to contact forms

--- a/contact.html
+++ b/contact.html
@@ -117,8 +117,7 @@
                                 </form>
 
                                 <div class="text-center">
-                                    <a class="btn btn-primary"
-                                        onclick="document.getElementById('contact-form').submit();">SEND</a>
+                                    <a class="btn btn-primary" onclick="validateContactForm();">Send</a>
                                 </div>
                                 <div class="status"></div>
                             </div>
@@ -138,6 +137,7 @@
     <!-- =================END FOOTER--========================= -->
     <footer>
         <script type="text/javascript" src="./js/footer-functions.js"></script>
+        <script type="text/javascript" src="./js/contact.js"></script>
     </footer>
     <!-- ==================START FOOTER ======================= -->
 
