small update to css and added more validatation

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="James Covington">
 
+    <link href="./css/bootstrap.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/contact.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -47,7 +48,7 @@
     </a>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="index.html">VACATION PICKER</a>
+        <a class="nav-link" href="index.html">VACATION STATE PICKER</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="contact.html">CONTACT</a>
@@ -64,15 +65,10 @@
     <br><br>
     <div class="container">
         <div class="row">
-            <div class="container col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/avjof2Izqq8?start=8" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="container col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+            <div class="container col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-8">
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12"
-                        style="background: darkgray; border-radius: 10px;">
+                        style="background: linear-gradient(#cacaca, #858383);; border-radius: 10px;">
                         <div class="row"></div>
                         <h2 class="h1 text-center"><b>CONTACT FORM</b></h2>
 
@@ -91,6 +87,36 @@
                                             <div class="form">
                                                 <input type="text" id="email" name="email" class="form-control"
                                                     placeholder="EMAIL">
+                                                <br></div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <div class="form">
+                                                <input type="text" id="phonenumber" name="phonenumber" class="form-control"
+                                                    placeholder="PHONE NUMBER">
+                                                <br></div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <div class="form">
+                                                <input type="text" id="randomwords" name="randomwords" class="form-control"
+                                                    placeholder="RANDOM WORDS">
+                                                <br></div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                            <div class="form">
+                                                <input type="text" id="zipcode" name="zipcode" class="form-control"
+                                                    placeholder="ZIP CODE">
+                                                <br></div>
+                                        </div>
+                                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                                            <div class="form">
+                                                <input type="text" id="bipcode" name="bipcode" class="form-control"
+                                                    placeholder="BIP CODE">
                                                 <br></div>
                                         </div>
                                     </div>
@@ -127,7 +153,11 @@
                     </div>
                 </div>
             </div>
-
+            <div class="container col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-4">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/avjof2Izqq8?start=8" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 
