--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <meta name="description" content="">
   <meta name="author" content="James Covington">
 
+  <link href="./css/bootstrap.css" rel="stylesheet">
   <link href="./css/style.css" rel="stylesheet">
   <link href="./css/home.css" rel="stylesheet">
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
@@ -45,7 +47,7 @@
     </a>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="index.html">VACATION PICKER</a>
+        <a class="nav-link active" href="index.html">VACATION STATE PICKER</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="contact.html">CONTACT</a>
@@ -63,7 +65,7 @@
       <div id="image-container" tabindex="-1" class="row">
         <img
           src="https://images.pexels.com/photos/414171/pexels-photo-414171.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
-          alt="Could not find image" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 ml-0 p-1" name="Greenland">
+          alt="Could not find image" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 ml-0 p-1" name="Maryland">
         <img
           src="https://images.pexels.com/photos/302804/pexels-photo-302804.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
           alt="Could not find image" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 ml-0 p-1" name="New York">
