--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <a class="nav-link" href="about.html">ABOUT</a>
       </li>
     </ul>
+    <form class="form-inline ml-auto">
+      <input class="form-control" type="search" placeholder="Search">
+      <button class="btn btn-outline-success" type="submit">Search</button>
+  </form>
   </nav>
   <!-- END NAVIGATION -->
 
